fixed images/ FINAL

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="CSS/V2style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -23,9 +23,9 @@
                 <div class="navbar">
                     <!-- Create a list to be used for navigation bar -->
                     <ul class="navList">
-                        <li><a href="#">About </a></li>
-                        <li><a href="#">Portfolio </a></li>
-                        <li><a href="#">Contact </a></li>
+                            <li><a href="index.html">About </a></li>
+                            <li><a href="portfolio.html">Portfolio </a></li>
+                            <li><a href="#">Contact </a></li>
                     </ul>
                 </div>
             </div>
@@ -53,11 +53,11 @@
                         <!--Links to Me-->
                         <div id="altLinks"> <h2>Contact With Me</h2>
                             <a href="https://github.com/">
-                            <img class="icon" src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/gitHubIcon.png" alt="nope">
+                            <img class="icon" src="Images/gitHubIcon.png" alt="nope">
                             </a><a href="https://www.linkedin.com/">
-                            <img class="icon" src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/LinkedInicon.png" alt="nope">
+                            <img class="icon" src="Images/LinkedInicon.png" alt="nope">
                             </a><a href="https://stackoverflow.com/">
-                            <img class="icon" src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/stackoverflow.png" alt="nope">
+                            <img class="icon" src="Images/stackoverflow.png" alt="nope">
                         </a>
                             </div>
                     </div>
