--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="CSS/V2style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -23,9 +23,9 @@
                 <div class="navbar">
                     <!-- Create a list to be used for navigation bar -->
                     <ul class="navList">
-                        <li><a href="#">About </a></li>
-                        <li><a href="#">Portfolio </a></li>
-                        <li><a href="#">Contact </a></li>
+                            <li><a href="index.html">About </a></li>
+                            <li><a href="#">Portfolio </a></li>
+                            <li><a href="contact.html">Contact </a></li>
                     </ul>
                 </div>
             </div>
@@ -39,11 +39,11 @@
                     <!--Content body -->
                     <div class="portBody">
                         <!--Each placeholder image in portfolio -->
-                        <div><img src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/cat1.jpg"></div>
-                        <div><img src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/cat2.jpg"></div>
-                        <div><img src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/cat3.jpg"></div>
-                        <div><img src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/cat4.jpg"></div>
-                        <div><img src="file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/cat5.jpg"></div>
+                        <div><img src="Images/cat1.jpg"></div>
+                        <div><img src="Images/cat2.jpg"></div>
+                        <div><img src="Images/cat3.jpg"></div>
+                        <div><img src="Images/cat4.jpg"></div>
+                        <div><img src="Images/cat5.jpg"></div>
                     </div>
                 
                 <br>
